<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_rounded_white"
    android:padding="@dimen/dialog_padding">

    <RelativeLayout
        android:id="@+id/rl_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/order_by"
            android:textColor="@color/color_dialog_title"
            android:textSize="@dimen/dialog_title_size"
            android:textStyle="bold" />

        <com.jcs.blanksheet.widget.JcsCheckedTextView
            android:id="@+id/rb_dialog_by_name_az"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_options_height"
            android:layout_below="@id/text_dialog_title"
            android:layout_marginBottom="@dimen/dialog_options_margin"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/by_name_az"
            android:textColor="@color/color_dialog_options"
            android:textSize="@dimen/dialog_text_message_size" />

        <com.jcs.blanksheet.widget.JcsCheckedTextView
            android:id="@+id/rb_dialog_by_name_za"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_options_height"
            android:layout_below="@id/rb_dialog_by_name_az"
            android:layout_marginBottom="@dimen/dialog_options_margin"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/by_name_az"
            android:textColor="@color/color_dialog_options"
            android:textSize="@dimen/dialog_text_message_size" />

        <com.jcs.blanksheet.widget.JcsCheckedTextView
            android:id="@+id/rb_dialog_by_date_recent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_options_height"
            android:layout_below="@id/rb_dialog_by_name_za"
            android:layout_marginBottom="@dimen/dialog_options_margin"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/by_date_most_recent"
            android:textColor="@color/color_dialog_options"
            android:textSize="@dimen/dialog_text_message_size" />

        <com.jcs.blanksheet.widget.JcsCheckedTextView
            android:id="@+id/rb_dialog_by_date_oldest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_options_height"
            android:layout_below="@id/rb_dialog_by_date_recent"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/by_date_oldest"
            android:textColor="@color/color_dialog_options"
            android:textSize="@dimen/dialog_text_message_size" />
    </RelativeLayout>
</RelativeLayout>